# mcpworks-api

./: .dockerignore  .env.example  .env.production.example  .env.self-hosted.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BILLING-PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Caddyfile.self-hosted  Dockerfile  LICENSE  MCP_SECURITY_AUDIT.md  ORDERS.md  PROBLEMS.md  PRODUCT-SPEC.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_RECOMMENDATIONS.md  SPEC.md  STYLE.md  SUPPORT-REPORT-2026-03-11.md  SUPPORT-REPORT-2026-03-12.md  alembic.ini  docker-compose.prod.yml  docker-compose.self-hosted.yml  docker-compose.yml  pyproject.toml
.beads/: metadata.json
.claude/: TODO.md
.claude/commands/: status.md
.do/: app.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
.specify/memory/: constitution.md
agent-runtime/: Dockerfile  entrypoint.py  requirements.txt
agent-runtime/mcpworks_agent/: ai_engine.py  scheduler.py  webhook_listener.py
alembic/: env.py
alembic/versions/: 20251217_000001_initial_schema.py  20251217_000002_add_executions_table.py  20260209_000001_add_a0_platform_models.py  20260210_000001_remove_credit_system.py  20260215_000001_add_requirements_to_function_versions.py  20260216_000001_add_tos_accepted_at_to_users.py  20260216_000002_add_tos_version_to_users.py  20260217_000001_add_call_counts.py  20260217_000002_security_event_ip_hash.py  20260219_000001_add_env_declarations_to_function_versions.py  20260225_000001_oauth_user_status_changes.py  20260225_000002_create_oauth_accounts.py  20260225_000003_create_email_logs.py  20260228_000001_add_created_by_to_function_versions.py  20260228_000002_create_namespace_shares.py  20260301_000001_rename_whitelist_to_allowlist.py  20260301_000002_add_pending_rejected_to_user_status.py  20260301_000003_value_ladder_tiers.py  20260302_000001_add_namespace_soft_delete.py  20260304_000001_add_email_verification_pin_fields.py  20260305_000001_add_pending_verification_status.py  20260311_000001_add_agents_phase_a.py  20260311_000002_add_agents_phase_b.py  20260311_000003_add_agent_webhooks.py  20260311_000004_add_agents_phase_c.py  20260311_000005_add_agents_phase_d.py  20260311_000006_extend_user_tier_constraints.py  20260312_000001_add_orchestration_fields.py  20260313_000001_add_mcp_servers.py  20260314_000001_add_tool_tier_to_agents.py  20260315_000001_pricing_v7_tier_migration.py  20260315_000002_add_orchestration_limits_to_agents.py  20260315_000003_add_heartbeat_to_agents.py  20260316_000001_add_language_to_function_versions.py  20260318_000001_add_scratchpad_to_agents.py  20260319_000001_add_deleted_at_to_functions.py  20260319_000002_add_scratchpad_expires_at.py  20260319_000003_add_chat_token_to_agents.py  20260319_000004_add_public_safe_to_functions.py  20260326_000001_add_namespace_git_remotes.py  (+16 more)
deploy/: server-setup.sh
deploy/nsjail/: execute.js  execute.py  package.json  python.cfg  run-smoketest.sh  seccomp.policy  setup-cgroups.sh  smoketest.py  spawn-sandbox.sh
docs/: GETTING-STARTED.md  SELF-HOSTING.md  demo-recording-script.md  demo-video-script-5min.md  guide.md  llm-reference.md  token-savings-analysis.md
docs/archive/: gateway-architecture-specification.md
docs/claude/: architecture.md  git-workflow.md  security.md  spec-workflow.md  (+2 more)
infra/: MIGRATION-TO-POP11.md  PLAN.md  POP11-ARCHITECTURE.md  SCALING.md
scripts/: backup-db-local.sh  backup-db.sh  deploy.sh  generate_keys.py  install-hooks.sh  migrate_tier_names.py  release.sh  restore-db.sh  seed_admin.py  seed_data.py  setup-sandbox-network.sh  setup-server.sh  start.sh  test-mcp.py
tests/: __init__.py  conftest.py
(+520 files in other folders)
